--- a/frontend-taskManager/src/app/footer/footer.component.html
+++ b/frontend-taskManager/src/app/footer/footer.component.html
@@ -1,5 +1,6 @@
-<footer class="footer">
-    <div class="container">
+<section class="container-fluid">
+  <footer class="footer container-fluid">
+    <div class="container-fluid">
       <div class="row">
         <div class="col-md-4">
           <h3>About Us</h3>
@@ -16,7 +17,7 @@
         </div>
         <div class="col-md-4 d-flex flex-column">
           <h3>Links</h3>
-          <div class="">
+          <div>
             <ul class="footer-links flex-column justify-content-start align-items-start">
               <li class="footer-link-item">
                 <a class="footer-link active" aria-current="page" routerLink="homepage">Home</a>
@@ -33,7 +34,6 @@
             </ul> 
           </div>
         </div>
-        
       </div>
       <!-- New Row -->
       <div class="row mt-5">
@@ -43,3 +43,4 @@
       </div>
     </div>
   </footer>
+</section>
