--- a/frontend-taskManager/src/app/header/header.component.html
+++ b/frontend-taskManager/src/app/header/header.component.html
@@ -42,13 +42,13 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="homepage/testForm">Form</a>
+              <a class="nav-link" routerLink="homepage/testForm">Task Manager</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" routerLink="homepage/about-us">About Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="homepage/results">Products</a>
+              <a class="nav-link" routerLink="homepage/results">DashBoard</a>
             </li>
           </ul>
           <form class="d-flex">
