--- a/frontend-taskManager/src/app/signup/signup.component.html
+++ b/frontend-taskManager/src/app/signup/signup.component.html
@@ -1,3 +1,55 @@
 <app-header></app-header>
-<p>signup works!</p>
+<main>
+  <div class="signup-container container my-5">
+    <h2 class="text-center mt-3">SignUp</h2>
+    <form [formGroup]="signupForm" (ngSubmit)="onSubmit()">
+      <!-- Username -->
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" formControlName="username" class="form-control" id="username" />
+        <div *ngIf="f['username'].touched && f['username'].invalid" class="invalid-feedback">
+          <div *ngIf="f['username'].errors?.['required']">Username is required</div>
+          <div *ngIf="f['username'].errors?.['minlength']">Username must be at least 6 characters</div>
+        </div>
+      </div>
+      
+      <!-- Email -->
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input type="email" formControlName="email" class="form-control" id="email" />
+        <div *ngIf="f['email'].touched && f['email'].invalid" class="invalid-feedback">
+          <div *ngIf="f['email'].errors?.['required']">Email is required</div>
+          <div *ngIf="f['email'].errors?.['email']">Invalid email format</div>
+        </div>
+      </div>
+
+      <!-- Role -->
+      <div class="form-group">
+        <label for="role">Role</label>
+        <select formControlName="role" class="form-control" id="role">
+          <option value="">Select role</option>
+          <option *ngFor="let role of roles" [value]="role">{{ role }}</option>
+        </select>
+        <div *ngIf="f['role'].touched && f['role'].invalid" class="invalid-feedback">
+          <div *ngIf="f['role'].errors?.['required']">Role is required</div>
+        </div>
+      </div>
+
+      <!-- Password -->
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" formControlName="password" class="form-control" id="password" />
+        <div *ngIf="f['password'].touched && f['password'].invalid" class="invalid-feedback">
+          <div *ngIf="f['password'].errors?.['required']">Password is required</div>
+          <div *ngIf="f['password'].errors?.['minlength']">Password must be at least 6 characters</div>
+        </div>
+      </div>
+
+      <button type="submit" class="btn btn-primary w-100 mt-3">Register</button>
+      <div class="text-center mt-3 mb-5">
+        <a [routerLink]="['/login']" class="text-white d-flex justify-content-end">Already a user? Login</a>
+      </div>
+    </form>
+  </div>
+</main>
 <app-footer></app-footer>
