--- a/frontend-taskManager/src/app/signup/signup.component.html
+++ b/frontend-taskManager/src/app/signup/signup.component.html
@@ -1,4 +1,4 @@
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 <main>
   <div class="signup-container container my-5">
     <h2 class="text-center mt-3">SignUp</h2>
@@ -52,4 +52,4 @@
     </form>
   </div>
 </main>
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
