--- a/frontend-taskManager/src/app/footer/footer.component.html
+++ b/frontend-taskManager/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
-<section class="container-fluid">
+<section class="footer-section">
   <footer class="footer container-fluid">
-    <div class="container-fluid">
+    <div class="container-fluid mt-5">
       <div class="row">
         <div class="col-md-4">
           <h3>About Us</h3>
@@ -20,7 +20,7 @@
           <div>
             <ul class="footer-links flex-column justify-content-start align-items-start">
               <li class="footer-link-item">
-                <a class="footer-link active" aria-current="page" routerLink="homepage">Home</a>
+                <a class="footer-link active" aria-current="page" routerLink="/homepage">Home</a>
               </li>
               <li class="footer-link-item">
                 <a class="footer-link" routerLink="homepage/testForm">Form</a>
