--- a/frontend-taskManager/src/app/homepage/homepage.component.html
+++ b/frontend-taskManager/src/app/homepage/homepage.component.html
@@ -1,6 +1,6 @@
-<app-header></app-header>
+<!-- <app-header></app-header> -->
 <main>
-<div class="container mt-5">
+<div class="container my-5">
     <!-- Hero Section -->
     <div class="hero-section text-center">
         <h1>
@@ -37,10 +37,10 @@
         </div>
       </div>
       <div class="d-flex justify-content-center">
-        <a class="btn btn-success btn-lg mt-3 text-white" routerLink="testForm">Get in Touch</a>
+        <a class="btn btn-success btn-lg my-3 text-white" routerLink="/customers">Get in Touch</a>
       </div>
     </div>
     </div>
 </main>
   
-<app-footer></app-footer>
+<!-- <app-footer></app-footer> -->
