--- a/frontend-taskManager/src/app/header/header.component.html
+++ b/frontend-taskManager/src/app/header/header.component.html
@@ -45,7 +45,7 @@
               <a class="nav-link" routerLink="/taskManager">Task Manager</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" routerLink="homepage/about-us">About Us</a>
+              <a class="nav-link" routerLink="/about-us">About Us</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" routerLink="/dashboard">DashBoard</a>
