--- a/frontend-taskManager/src/app/task-manager/task-manager.component.html
+++ b/frontend-taskManager/src/app/task-manager/task-manager.component.html
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <form [formGroup]="addTask" (ngSubmit)="onSubmit()">
         <div class="container-fluid d-flex justify-content-center">
-            <h1 class="my-3 text-white">TASK</h1>
+            <h1 class="my-3 text-white">{{isEditMode ? "Edit Task" : "Add Task"}}</h1>
         </div>
       <div class="row">
         <div class="col-lg-12 mt-5">
@@ -52,7 +52,7 @@
           </div>
         </div>
         <div class="col-lg-12 my-5">
-          <button type="submit" class="btn btn-primary">ADD</button>
+          <button type="submit" class="btn btn-primary">{{isEditMode ? "Edit" : "Add"}}</button>
         </div>
       </div>
     </form>
