--- a/frontend-taskManager/src/app/dashboard/update-button/update-button.component.html
+++ b/frontend-taskManager/src/app/dashboard/update-button/update-button.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-info" (click)="updateTask(taskId)">Update</button>
+<button class="btn btn-info text-white" (click)="updateTask(taskId)">Update</button>
